Crie um botão 'voltar' na pagina de layouts

--- a/atividades/layout/layout.html
+++ b/atividades/layout/layout.html
@@ -7,6 +7,7 @@
     <title>Layouts</title>
 </head>
 <body>
+    <a href="../../index.html">Voltar</a>
     <a href="pages/layout1.html">Layout 1</a>
     <a href="pages/layout2.html">Layout 2</a>
     <a href="pages/layout3.html">Layout 3</a>
