--- a/atividades/layout/pages/layout1.html
+++ b/atividades/layout/pages/layout1.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout 1</title>
+    <link rel="stylesheet" href="../styles/layout1.css">
 </head>
 <body>
-    
+    <div id="grid-container">
+        <div id="logo">Logo</div>
+        <div id="navigation">Navigation</div>
+        <header id="header">Header/Banner</header>
+        <div id="side-bar">Side Bar</div>
+        <div id="body-area">Body Area</div>
+        <footer id="footer">Footer</footer>
+    </div>
 </body>
 </html>
