--- a/atividades/layout/styles/layout1.css
+++ b/atividades/layout/styles/layout1.css
@@ -1,9 +1,9 @@
 #logo { grid-area: logo; display: flex;}
-#navigation { grid-area: navigation; }
-#header { grid-area: header; }
+#navigation { grid-area: navigation; display: flex; justify-content: center; align-items: center;}
+#header { grid-area: header; display: flex; justify-content: center; align-items: center;}
 #side-bar { grid-area: side; display: flex; justify-content: center; align-items: center;}
 #body-area { grid-area: body; display: flex; justify-content: center; align-items: center;}
-#footer { grid-area: footer; }
+#footer { grid-area: footer; display: flex; justify-content: center; align-items: center;}
 
 #grid-container {
     display: grid;
