--- a/atividades/layout/styles/layout2.css
+++ b/atividades/layout/styles/layout2.css
@@ -1,10 +1,42 @@
-#ln { grid-area: ln; }
-#header { grid-area: header; }
-#intro { grid-area: intro; }
-#box1 { grid-area: box1; }
-#box2 { grid-area: box2; }
-#box3 { grid-area: box3; }
-#footer { grid-area: footer; }
+#ln { 
+    grid-area: ln; 
+}
+#header { 
+    grid-area: header; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+}
+#intro { 
+    grid-area: intro; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+}
+#box1 { 
+    grid-area: box1; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+}
+#box2 { 
+    grid-area: box2; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+}
+#box3 { 
+    grid-area: box3; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+}
+#footer { 
+    grid-area: footer; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+}
 
 #grid-container {
     display: grid;
@@ -22,7 +54,6 @@
 
 #grid-container > * {
     background-color: yellowgreen;
-    padding: 20px 0;
 }
 
 #ln {
@@ -30,9 +61,15 @@
 }
 
 #logo {
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
     flex-grow: 1;
 }
 
 #navigation {
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
     flex-grow: 2;
 }
