--- a/atividades/layout/pages/layout3.html
+++ b/atividades/layout/pages/layout3.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout 3</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container">
+        <div>Logo</div>
+        <aside>Side bar Navigation</aside>
+        <header>Header/Banner</header>
+        <div>Body Area</div>
+        <footer>Footer</footer>
+    </div>
 </body>
 </html>
