--- a/atividades/layout/pages/layout3.html
+++ b/atividades/layout/pages/layout3.html
@@ -5,15 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout 3</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" 
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
+    crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-        <div>Logo</div>
-        <aside>Side bar Navigation</aside>
-        <header>Header/Banner</header>
-        <div>Body Area</div>
-        <footer>Footer</footer>
+    <div class="container bg-primary">
+        <div class="row" style="height: 50px;">
+            <div class="col bg-secondary h-100">
+                Logo
+            </div>
+        </div>
+
+        <div class="row" style="height: 500px;">
+            <div class="col h-100">
+                Side bar Navigation
+            </div>
+
+            <div class="col h-100">
+                <div class="row bg-secondary h-25">
+                    Header/Banner
+                </div>
+                <div class="row bg-secondary h-75">
+                    Body Area
+                </div>
+            </div>
+        </div>
+
+        <div class="row" style="height: 50px;">
+            <div class="col bg-secondary h-100">
+                Footer
+            </div>
+        </div>
     </div>
 </body>
 </html>
