--- a/atividades/layout/pages/layout3.html
+++ b/atividades/layout/pages/layout3.html
@@ -12,29 +12,29 @@
 </head>
 <body>
     <div class="container bg-primary">
-        <div class="row" style="height: 50px;">
-            <div class="col bg-secondary h-100">
+        <div class="row pb-1" style="height: 50px;">
+            <div class="col bg-secondary h-100 p-1 m-1">
                 Logo
             </div>
         </div>
 
-        <div class="row" style="height: 500px;">
-            <div class="col h-100">
+        <div class="row mt-1" style="height: 500px;">
+            <div class="col h-100 bg-success mx-1">
                 Side bar Navigation
             </div>
 
-            <div class="col h-100">
-                <div class="row bg-secondary h-25">
+            <div class="col h-100 mr-1 pb-1">
+                <div class="row bg-secondary h-25 mb-1 p-1">
                     Header/Banner
                 </div>
-                <div class="row bg-secondary h-75">
+                <div class="row bg-secondary h-75 p-1">
                     Body Area
                 </div>
             </div>
         </div>
 
-        <div class="row" style="height: 50px;">
-            <div class="col bg-secondary h-100">
+        <div class="row">
+            <div class="col bg-secondary h-100 p-1 m-1">
                 Footer
             </div>
         </div>
