Termine os layouts

--- a/atividades/layout/pages/layout3.html
+++ b/atividades/layout/pages/layout3.html
@@ -12,20 +12,21 @@
 </head>
 <body>
     <div class="container bg-primary">
-        <div class="row pb-1" style="height: 50px;">
-            <div class="col bg-secondary h-100 p-1 m-1">
+        <div class="row" style="min-height: 50px;">
+            <div class="col bg-secondary p-1 m-1">
                 Logo
             </div>
         </div>
 
-        <div class="row mt-1" style="height: 500px;">
-            <div class="col h-100 bg-success mx-1">
-                Side bar Navigation
+        <div class="row" style="min-height: 500px;">
+            <div class="col bg-success mx-1">
+                Side bar <br>
+                Navigation
             </div>
 
-            <div class="col h-100 mr-1 pb-1">
+            <div class="col mr-1 pb-1">
                 <div class="row bg-secondary h-25 mb-1 p-1">
-                    Header/Banner
+                    Header / Banner
                 </div>
                 <div class="row bg-secondary h-75 p-1">
                     Body Area
