Mude o tamanho do logo no layout4

--- a/atividades/layout/pages/layout4.html
+++ b/atividades/layout/pages/layout4.html
@@ -13,8 +13,8 @@
 <body>
     <div class="container bg-primary">
         <div class="row p-1" style="min-height: 50px;">
-            <div class="col bg-secondary">Logo</div>
-            <div class="col bg-success">Navigation</div>
+            <div class="col-4 bg-secondary">Logo</div>
+            <div class="col-8 bg-success">Navigation</div>
         </div>
         
         <div class="row">
