Crie um botão voltar para os layouts

--- a/tasks/layout/pages/layout1.html
+++ b/tasks/layout/pages/layout1.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../styles/layout1.css">
 </head>
 <body>
+    <a href="../layout.html">Voltar</a>
     <div id="grid-container">
         <div id="logo">Logo</div>
         <div id="navigation">Navigation</div>
