--- a/tasks/layout/pages/layout2.html
+++ b/tasks/layout/pages/layout2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../styles/layout2.css">
 </head>
 <body>
+    <a href="../layout.html">Voltar</a>
     <div id="grid-container">
         <div id="ln">
             <div id="logo">Logo</div>
