--- a/tasks/layout/pages/layout3.html
+++ b/tasks/layout/pages/layout3.html
@@ -11,6 +11,7 @@
     crossorigin="anonymous">
 </head>
 <body>
+    <a href="../layout.html">Voltar</a>
     <div class="container bg-primary">
         <div class="row" style="min-height: 50px;">
             <div class="col bg-secondary p-1 m-1">
