--- a/tasks/layout/pages/layout4.html
+++ b/tasks/layout/pages/layout4.html
@@ -11,6 +11,7 @@
     crossorigin="anonymous">
 </head>
 <body>
+    <a href="../layout.html">Voltar</a>
     <div class="container bg-primary">
         <div class="row p-1" style="min-height: 50px;">
             <div class="col-4 bg-secondary">Logo</div>
